...
            ) {
                Column(
                    modifier = Modifier.padding(24.dp),
                    horizontalAlignment = Alignment.CenterHorizontally
                ) {
                    Text(
                        text = "Bienvenido a LVL-UP Gamer",
                        fontSize = 22.sp,
                        fontWeight = FontWeight.Bold,
                        color = MaterialTheme.colorScheme.primary,
                        textAlign = TextAlign.Center
                    )
                    Spacer(modifier = Modifier.height(16.dp))
...

                    Spacer(modifier = Modifier.height(16.dp))

                    Button(
                        onClick = onNavigateToProducts
                    ) {
                        Text("Ver Productos")
                    }
                }
            }

            // GIF Mediano (Mario)
            AnimatedImage(
...
