...
            .build()
    }

    AsyncImage(
        model = R.drawable.gameverse_logo,
        imageLoader = imageLoader,
        contentDescription = "Logo de Gameverse",
        modifier = modifier
            .size(200.dp)
            .clip(RoundedCornerShape(16.dp))
    )
}

...
